chore: Clean up repository for professional submission
- Update .gitignore and .dockerignore to reflect current project structure
- Remove obsolete references to communications/ and development/ directories
- Add .cursor/ to .gitignore and remove IDE artifacts from working directory
- Clean up .DS_Store files
- Repository now contains only assessment-relevant content for clean public presentation

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ vendor/
 
 # IDE files
 .vscode/
+.cursor/
 .idea/
 *.swp
 
@@ -28,5 +29,5 @@ vendor/
 .DS_Store
 Thumbs.db
 
-# Development artifacts
-communications/
+# Development artifacts  
+# (none currently)
