improve: Optimize .gitignore and enhance test infrastructure
.gitignore optimizations:
- Remove unnecessary /server entry (we only create package-indexer binary)
- Remove vendor/ (project uses Go modules, not vendoring)
- Fix coverage file patterns (we generate coverage.out, not .html/.txt)
- Add missing coverage.out entry that was actually being generated

Test infrastructure improvements:
- Refactor run_harness.sh to use common server utilities for consistency
- Fix coverage calculation in final_verification.sh for accurate reporting
- Add server readiness probes and better lifecycle management
- Improved maintainability with DRY principles

All tests continue to pass with enhanced reliability and accuracy.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
 # Binaries
 package-indexer
-/server
 *.exe
 
-# Go build artifacts
+# Go build artifacts  
 *.so
 *.dylib
 *.test
-*.out
 
 # Coverage reports
-coverage.html
-coverage.txt
+coverage.out
 
 # Version files
 version
-
-# Dependencies
-vendor/
 
 # IDE files
 .vscode/
